--- a/Manobras.html
+++ b/Manobras.html
@@ -8,7 +8,15 @@
     <title>Manobras</title>
 </head>
 <body>
-    <h1>Manobras</h1>
+    <header>
+        <h1>Manobras</h1>
+        <nav>
+            <a href="index.htm" class="button-Personalizado">Início</a>
+            <a href="sobre.html" class="button-Personalizado">Sobre</a>
+            <a href="equipamentos.html" class="button-Personalizado">Equipamentos</a>
+            <a href="Manobras.html" class="button-Personalizado" id="manobras">Manobras</a>
+       </nav>
+    </header>
     <h3>Principais Manobras de Skate</h3>
     <div class="content">
         <h4>Ollie</h4>
@@ -50,7 +58,9 @@
 
         </div><br> <br>
 
-        
+<footer>
+    <p>&copy; 2025 Skate Mania | Todos os direitos reservados</p>
+  </footer>
    
 </body>
 </html>
