--- a/equipamentos.html
+++ b/equipamentos.html
@@ -8,7 +8,15 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <header>
     <h1>Equipametos</h1>
+    <nav>
+            <a href="index.htm" class="button-Personalizado">Início</a>
+            <a href="sobre.html" class="button-Personalizado">Sobre</a>
+            <a href="equipamentos.html" class="button-Personalizado" id="equipamentos">Equipamentos</a>
+            <a href="Manobras.html" class="button-Personalizado">Manobras</a>
+       </nav>
+    </header>
    
     <h3>Shape</h3>
     <div class="equipamentos">
@@ -50,8 +58,11 @@
     <h3>Kicktails </h3>
     <div class="equipamentos">
         <p>As elevações nas extremidades do deck (nose e tail); fundamentais para ollies, flips e manobras street</p>
-        <img src="tail (1).png" alt="Tail"></img><br>
-        <a href="https://freedomskateshop.at/en-int/blogs/skate-tech/nose-tail-kick?srsltid=AfmBOopTvlQ4BIiAq4r0xNLpWz3c4gk2lmxtpSyNwZv5bq4_tZ-3JmnH"  target="_blank" class="link">Veja mais</a>
+        <img src="tail (1).png" alt="Tail"></img> 
+        <a href="https://freedomskateshop.at/en-int/blogs/skate-tech/nose-tail-kick?srsltid=AfmBOopTvlQ4BIiAq4r0xNLpWz3c4gk2lmxtpSyNwZv5bq4_tZ-3JmnH"  target="_blank" class="link" id="tail">Veja mais</a>
     </div>
+    <footer>
+    <p>&copy; 2025 Skate Mania | Todos os direitos reservados</p>
+  </footer>
 </body>
 </html>
