--- a/index.htm
+++ b/index.htm
@@ -8,16 +8,21 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
+  <header>
+    <h1>Skate</h1>
+  </header>
   <!-- Seção de Conteúdo -->
   <div class="container">
-    <h1>Skate</h1>
     <p>Explore o mundo do skate com a gente! Escolha um dos tópicos abaixo para aprender mais.</p>
     <a href="sobre.html" class="button-Personalizado">Sobre Skate</a>
     <a href="equipamentos.html" class="button-Personalizado">Equipamentos</a>
     <a href="Manobras.html" class="button-Personalizado">Manobras</a>
     
     </div>
-
+  <footer>
+    <p>&copy; 2025 Skate Mania | Todos os direitos reservados</p>
+    <p>&copy; Feito por Cauã Mendes e João Riguete</p>
+  </footer>
    
 </body>
 </html>
