--- a/sobre.html
+++ b/sobre.html
@@ -8,8 +8,18 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div class="container">
+    <header>
         <h1>Curiosidades sobre Skate</h1>
+       <nav>
+            <a href="index.htm" class="button-Personalizado">Início</a>
+            <a href="sobre.html" class="button-Personalizado" id="sobre">Sobre</a>
+            <a href="equipamentos.html" class="button-Personalizado">Equipamentos</a>
+            <a href="Manobras.html" class="button-Personalizado">Manobras</a>
+            
+       </nav>
+     
+    </header>
+    <div class="container">
         <p>
         O skateboard, ou simplesmente skate, surgiu nos Estados Unidos durante os anos 1950, quando surfistas da Califórnia buscavam uma forma de "surfar" nas ruas durante os dias em que o mar não tinha ondas. Foi assim que nasceu o “sidewalk surfing”, ou “surfe de calçada”. Os primeiros skates eram feitos de pranchas de madeira com rodinhas de patins fixadas embaixo, de forma bem artesanal.
 
@@ -31,5 +41,8 @@
     <img  id="skate2" src="skate2.jpeg" alt="skate">
     <img id="skate3" src="skate3.jpeg" alt="skate">
     </div>
+    <footer>
+    <p>&copy; 2025 Skate Mania | Todos os direitos reservados</p>
+  </footer>
 </body>
 </html>
