--- a/Manobras.html
+++ b/Manobras.html
@@ -17,6 +17,7 @@
             <a href="Manobras.html" class="button-Personalizado" id="manobras">Manobras</a>
        </nav>
     </header>
+    <main>
     <h3>Principais Manobras de Skate</h3>
     <div class="content">
         <h4>Ollie</h4>
@@ -57,7 +58,7 @@
             
 
         </div><br> <br>
-
+</main>
 <footer>
     <p>&copy; 2025 Skate Mania | Todos os direitos reservados</p>
   </footer>
