--- a/equipamentos.html
+++ b/equipamentos.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <main>
     <h1>Equipametos</h1>
     <nav>
             <a href="index.htm" class="button-Personalizado">Início</a>
@@ -61,6 +62,7 @@
         <img src="tail (1).png" alt="Tail"></img> 
         <a href="https://freedomskateshop.at/en-int/blogs/skate-tech/nose-tail-kick?srsltid=AfmBOopTvlQ4BIiAq4r0xNLpWz3c4gk2lmxtpSyNwZv5bq4_tZ-3JmnH"  target="_blank" class="link" id="tail">Veja mais</a>
     </div>
+    </main>
     <footer>
     <p>&copy; 2025 Skate Mania | Todos os direitos reservados</p>
   </footer>
