--- a/index.htm
+++ b/index.htm
@@ -11,6 +11,7 @@
   <header>
     <h1>Skate</h1>
   </header>
+    <main>
   <!-- Seção de Conteúdo -->
   <div class="container">
     <p>Explore o mundo do skate com a gente! Escolha um dos tópicos abaixo para aprender mais.</p>
@@ -19,6 +20,7 @@
     <a href="Manobras.html" class="button-Personalizado">Manobras</a>
     
     </div>
+      </main>
   <footer>
     <p>&copy; 2025 Skate Mania | Todos os direitos reservados</p>
     <p>&copy; Feito por Cauã Mendes e João Riguete</p>
