--- a/sobre.html
+++ b/sobre.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <main>
         <h1>Curiosidades sobre Skate</h1>
        <nav>
             <a href="index.htm" class="button-Personalizado">Início</a>
@@ -41,6 +42,7 @@
     <img  id="skate2" src="skate2.jpeg" alt="skate">
     <img id="skate3" src="skate3.jpeg" alt="skate">
     </div>
+    </main>
     <footer>
     <p>&copy; 2025 Skate Mania | Todos os direitos reservados</p>
   </footer>
